2001-11-02  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-copy-buffer): Call `w3m-goto-url' instead of copying
	buffer content.

2001-11-02  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-reload-this-page): Change the semantic of the prefix
	argument to `clear form and post datas'.

2001-11-02  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (emacs-w3m-version): Imcremented to `1.2rc5'.

2001-11-01  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-goto-url): Remove processing url's forms from the
	history when post data.

	* w3m-form.el (w3m-form-resume): Remove submit button status
	to support forms containing multiple submit buttons.

2001-11-01  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m): Use `select-frame-set-input-focus' instead of
	`x-focus-frame'.

	* w3m-form.el (w3m-form-resume): Fix typo.

2001-10-31  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-w3m-attributes): Return the pseudo-normalized URL as
	the real URL of the target URL, when it lacks a scheme part or a
	hierachical part.
	(w3m-about-header): Select the character which is used to draw a
	rule, based on the value of `w3m-language'.

2001-10-30  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-form.el (w3m-form-parse-forms): Dismantle `w3m-current-url'
	of its query part before the rest is refered as the default value
	of the action.

	* w3m.el (w3m-ccl-write-repeat): Accept optional arguments to
	avoid difference between Emacesn on CCL.
	(w3m-iso-latin-1-decoder): Call `w3m-ccl-write-repeat' with
	optional argument.

2001-10-29  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-terminal-coding-system): Changed default value
	for w3m(en).
	(w3m-input-coding-system): Ditto.
	(w3m-default-coding-system): Ditto.
	(w3m-iso-latin-1-decoder): Fixed for latin-iso8859-1 under old Emacsen.
	(w3m-ccl-write-repeat): Ditto.

2001-10-29  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (emacs-w3m-version): Imcremented to `1.2rc4'.
